--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,51 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  background-color: rgb(14, 13, 13);
+  color: rgb(255, 255, 255);
+  font-family: 'SOYOMapleBoldTTF';
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@font-face {
+  font-family: 'SOYOMapleBoldTTF';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/SOYOMapleBoldTTF.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+.EC-mark {
+  width: 70px;
+  height: auto;
+  transition: width 0.3s ease-in-out;
+}
+
+@media (min-width: 576px) {
+  .EC-mark {
+    width: 70px;
+  }
+}
+
+@media (min-width: 768px) {
+  .EC-mark {
+    width: 90px;
+  }
+}
+
+@media (min-width: 992px) {
+  .EC-mark {
+    width: 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .EC-mark {
+    width: 100px;
   }
 }
