--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -34,7 +34,7 @@
     transition: color 0.3s ease;
 }
 
-.ECmark {
+.img {
     width: 100px;
     height: auto;
     animation: rotate-scale-down 1.3s linear both;
